# ct_palette

./: .gitignore  inference.py  pyproject.toml
config/: outpainting_model.json
ctpalette/: paths.py
ctpalette/test/: eval_utils.py
