[project]
name = "ct_palette"
version = "0.1.0"
description = "CT Palette project"
authors = [
    { name = "Francois" }
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "opencv-python (>=4.13.0.90,<5.0.0.0)",
    "pandas (<3.0.0)",
    "scikit-image (>=0.26.0,<0.27.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "pydicom (>=3.0.1,<4.0.0)",
    "mlflow (>=3.9.0,<4.0.0)",
    "tqdm (>=4.67.2,<5.0.0)",
    "lpips (>=0.1.4,<0.2.0)",
    "tensorboardx (>=2.6.4,<3.0.0)",
    "tensorflow (>=2.20.0,<3.0.0)",
    "lungmask (>=0.2.20,<0.3.0)",
    "python-gdcm (>=3.2.2,<4.0.0)",
    "nibabel (>=5.3.3,<6.0.0)"

]

[tool.poetry]
packages = [{include = "ctpalette"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
